--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="https://codepen.io/melvfernandez/">Work</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -74,7 +74,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Melvynn Fernandez</h1>
-                        <h3>Portfolio Page</h3>
+                        <h3>Aspiring Front End Web Developer</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
