--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Random Quote Machine<br>Special Thanks</h2>
+                    <h2 class="section-heading">Random Quote Machine<br>This is intended for beginners who want to create a simple web application using JavaScript. This project helped me understand the interaction between JavaScript and an HTML document, and how they work together to display things on the web browser for people to see.</h2>
                     <p class="lead"><a target="_blank" href="https://codepen.io/melvfernandez/pen/yXYzNg">Random Quote Generator</a></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
