--- a/index.html
+++ b/index.html
@@ -151,11 +151,17 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
+			<h2 class="section-heading"><strong>Certifications</strong><br>A few of the material I have taken online</h2>
                     <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                	<!-- Begin: HubSpot Academy - Inbound Badge -->
+			<div class='academy-badge'>
+				<a href='http://academy.hubspot.com/certification' title='Inbound'>
+				<img src='http://api.hubapi.com/academy/v1/badge-image/82eab0ee4a2946838d04f7eb6e251970' />
+				</a>
+			</div>
+<!-- End: HubSpot Academy - Inbound Badge -->
                 </div>
             </div>
 
