--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-			<h2 class="section-heading"><strong>Certifications</strong><br>A few of the material I have taken online</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+			<h2 class="section-heading"><strong>Certifications</strong></h2>
+                    <p class="lead">A few of the material I have taken online</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                 	<!-- Begin: HubSpot Academy - Inbound Badge -->
