--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>Melvynn Fernandez</h1>
-                <p class="lead">Complete with pre-defined file paths that you won't have to change!!</p>
+                <h1>Hi! My name is Melvynn.</h1>
+                <p class="lead">I like things simple and clean. :)</p>
                 <ul class="list-unstyled">
                     <li>Copyright Melvynn Fernandez</li>
                     <li>Bootstrap v3.3.7</li>
