--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#">Work</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
