--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h1>Hi! My name is Melvynn.</h1>
+                <h1><p style="margin-top: 10px;">Hi! My name is Melvynn.</h1>
                 <p class="lead">I like things simple and clean. :)</p>
                 <ul class="list-unstyled">
                     <li>Copyright Melvynn Fernandez</li>
